# roman-number-converter

./: .env  README.md  compose.yaml  dockerfile  pyproject.toml
cli-roman/: README.md  compose.yaml  dockerfile  main.py  pyproject.toml
cli-roman/src/: errors.py  log_demo.py  redis_connection.py  roman.py  roman_cli.py
cli-roman/src/cli_roman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli-roman/tests/: test_to_roman.py
src/: postgresql_db.py  roman.py  roman_cli.py
src/api/: roman_api.py
tests/: test_to_int.py
