[project]
name = "cli-roman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "icecream>=2.1.5",
    "logging>=0.4.9.6",
    "psycopg>=3.2.9",
    "pytest>=8.4.1",
    "redis>=6.2.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]
[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
roman = "roman_cli:app"